--- a/app/src/main/res/layout/activity_details_screen.xml
+++ b/app/src/main/res/layout/activity_details_screen.xml
@@ -169,6 +169,12 @@
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
+            <LinearLayout
+                android:id="@+id/layout_whole_caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
 
             <LinearLayout
                 android:id="@+id/linearLayout_Caption"
@@ -207,6 +213,7 @@
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linearLayout_url"
